# CSRadar

./: Cargo.toml  readme.md
frontend/: README.md  main.py  package-lock.json
frontend-react/: package-lock.json  package.json
frontend-react/public/: radar.json
frontend-react/src/components/: radar.js
frontend/public/static/de_mirage/: data.json
frontend/src/: App.js
frontend/src/components/: radar.js
frontent-react/: package-lock.json  package.json
res/: offsets.json  reversing_cheat_table.CSX
src/: main.rs
src/cs2_offsets/: engine2_dll.rs  mod.rs  offsets.rs
src/entities/: player.rs
src/features/: mod.rs  radar.rs  triggerbot.rs
src/utils/: memory.rs  mod.rs  offsets.rs
