[package]
name = "csradar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
winapi = { version = "0.3.9", features = ["tlhelp32", "winnt", "winuser"] }
sysinfo = { version = "0.30.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
read-process-memory = "0.1.6"
enigo ={ version = "0.1.3" }
clearscreen = "2.0.1"
